src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Category__c</fullName>
        <formula>IF( Is_Insurance_Company__c = TRUE, &quot;Insurance Company&quot;, CASE(Name, &quot;Internet&quot;, &quot;Internet&quot;, &quot;Alumni&quot;, &quot;Alumni&quot;, &quot;Self Referral&quot;, &quot;Self Referral&quot;, &quot;Quality Assurance&quot;, &quot;Internet&quot;, &quot;Outreach&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Rep__c</fullName>
        <description>The one responsible for this account.</description>
        <label>Account Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alicia Reddy</fullName>
                </value>
                <value>
                    <fullName>Austin Thomas</fullName>
                </value>
                <value>
                    <fullName>Billy Briggs</fullName>
                </value>
                <value>
                    <fullName>Brian Cellary</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>CCR Employee</fullName>
                </value>
                <value>
                    <fullName>Chanda Lynn</fullName>
                </value>
                <value>
                    <fullName>Chuck Dehnel</fullName>
                </value>
                <value>
                    <fullName>Colin Troy</fullName>
                </value>
                <value>
                    <fullName>Danielle Huele</fullName>
                </value>
                <value>
                    <fullName>Erik Pavao</fullName>
                </value>
                <value>
                    <fullName>Haven Employee</fullName>
                </value>
                <value>
                    <fullName>ICFR Employee</fullName>
                </value>
                <value>
                    <fullName>Jamie Berkoben</fullName>
                </value>
                <value>
                    <fullName>Jessica Drago</fullName>
                </value>
                <value>
                    <fullName>Josh Craig</fullName>
                </value>
                <value>
                    <fullName>Karrie Campos</fullName>
                </value>
                <value>
                    <fullName>Kirill</fullName>
                </value>
                <value>
                    <fullName>Lucy</fullName>
                </value>
                <value>
                    <fullName>Matt Cincogrono</fullName>
                </value>
                <value>
                    <fullName>Matt Dunphy</fullName>
                </value>
                <value>
                    <fullName>Mike O&apos;Sullivan</fullName>
                </value>
                <value>
                    <fullName>Nick Gore</fullName>
                </value>
                <value>
                    <fullName>Ralph Johnson</fullName>
                </value>
                <value>
                    <fullName>Richard Hennessy</fullName>
                </value>
                <value>
                    <fullName>Richie Webber</fullName>
                </value>
                <value>
                    <fullName>Ron Shippert</fullName>
                </value>
                <value>
                    <fullName>Santino Coviello</fullName>
                </value>
                <value>
                    <fullName>Saul Kane</fullName>
                </value>
                <value>
                    <fullName>Self Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <label>Account State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Street_Address__c</fullName>
        <label>Account Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>What type off account?</description>
        <label>Account Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>Interventionist</fullName>
                </value>
                <value>
                    <fullName>Legal Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Treatment Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Zip_Code__c</fullName>
        <label>Account Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of Facility</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alumni_Rep__c</fullName>
        <label>Alumni Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nick Newcity</fullName>
                </value>
                <value>
                    <fullName>Katie Gibson</fullName>
                </value>
                <value>
                    <fullName>Calen Cox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BB_DNREADMIT_Reason__c</fullName>
        <label>BB DNREADMIT Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BB_Do_Not_Readmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BB Do Not Readmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BB_Insurance_ID__c</fullName>
        <description>Bluebook Insurance Company Name ID</description>
        <label>BB Insurance ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BlueBook_Account_Number__c</fullName>
        <description>Account number for Bluebook Account and API</description>
        <label>BlueBook Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Agent_Name__c</fullName>
        <label>CTM Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Campaign__c</fullName>
        <label>CTM Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTM_Landing_Page__c</fullName>
        <label>CTM Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CTM_Recording_URL__c</fullName>
        <label>CTM Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <label>Call ID</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Called_by__c</fullName>
        <label>Called by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Gender__c</fullName>
        <label>Client Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discharge_Date__c</fullName>
        <label>Discharge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Net_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider is in network</description>
        <label>In-Net Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Network_With__c</fullName>
        <description>List all insurance provider is in network with.</description>
        <label>In Network With:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Phone__c</fullName>
        <label>Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Is_Insurance_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Insurance Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Called__c</fullName>
        <label>Last Called</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Level_s_Of_Care__c</fullName>
        <description>Please choose all levels of care.</description>
        <label>Level(s) Of Care</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>Supportive Living</fullName>
                </value>
                <value>
                    <fullName>Observation</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifetime_Days_of_Treatment__c</fullName>
        <label>Lifetime Days of Treatment</label>
        <summarizedField>Opportunity.Total_Length_of_Stay__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider is out of network</description>
        <label>OON Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Parent Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <externalId>true</externalId>
        <label>Patient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_SSN__c</fullName>
        <label>Patient SSN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Private Pay</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preadmit_link__c</fullName>
        <label>Preadmit link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Prior_Patient_Admit_Date__c</fullName>
        <label>Prior Patient Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_Email__c</fullName>
        <label>Referral Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_UserId__c</fullName>
        <label>Referral UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Subscriber__c</fullName>
        <label>Relationship to Subscriber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_DOB__c</fullName>
        <label>Subscriber DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_Employer__c</fullName>
        <label>Subscriber Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <label>Subscriber Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bb_patient_id__c</fullName>
        <label>bb_patient_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Admitted</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Rep__c</columns>
        <columns>Account_Rep__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Status__c</field>
            <operation>contains</operation>
            <value>Admitted</value>
        </filters>
        <label>Admitted</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Facility_Interest__pc</columns>
        <columns>Payment_Method__c</columns>
        <columns>Insurance_Company_Name__pc</columns>
        <columns>Member_ID_Number__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prior_Patient_Admit_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>New Admits</label>
    </listViews>
    <listViews>
        <fullName>Did_Not_Admit</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Did Not Admit</value>
        </filters>
        <label>Did Not Admit</label>
    </listViews>
    <listViews>
        <fullName>Facility_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Referral_Sources</value>
        </filters>
        <label>Facility Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Person_Accounts</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Facility_Interest__pc</columns>
        <columns>Payment_Method__c</columns>
        <columns>Insurance_Company__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Prior_Patient_Admit_Date__c</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>CTM_Campaign__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Amount_Paid__pc</columns>
        <columns>Services_Provided__pc</columns>
        <columns>Transport_Info__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Person Accounts</label>
    </listViews>
    <listViews>
        <fullName>Recently_Contacted</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Facility_Interest__pc</columns>
        <columns>Last_Called__c</columns>
        <columns>Called_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Called__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Compliance Recently Contacted</label>
    </listViews>
    <recordTypes>
        <fullName>Insurance_Company</fullName>
        <active>true</active>
        <label>Insurance Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referral_Sources</fullName>
        <active>true</active>
        <label>Referral Sources</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>